--- a/haste-server/static/index.html
+++ b/haste-server/static/index.html
@@ -1,11 +1,18 @@
 <html>
 	<head>
-		<title>hastebin</title>
+		<title>Hastebin</title>
 		<meta charset="utf-8" />
-		<link rel="stylesheet" type="text/css" href="solarized_dark.css" />
+		<link rel="stylesheet" type="text/css" href="atom-one-dark-reasonable.css" />
 		<link rel="stylesheet" type="text/css" href="application.css" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" />
+		<link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet" />
 
-		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+		<script
+			type="text/javascript"
+			src="https://code.jquery.com/jquery-3.5.1.min.js"
+			integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+			crossorigin="anonymous"
+		></script>
 		<script type="text/javascript" src="highlight.min.js"></script>
 		<script type="text/javascript" src="application.min.js"></script>
 
@@ -36,7 +43,7 @@
 			}, 1000);
 			// Construct app and load initial path
 			$(function () {
-				app = new haste('hastebin', { twitter: true });
+				app = new haste('hastebin', { twitter: false });
 				handlePop({ target: window });
 			});
 		</script>
@@ -55,7 +62,6 @@
 				<button class="new function button-picture">New</button>
 				<button class="duplicate function button-picture">Duplicate & Edit</button>
 				<button class="raw function button-picture">Just Text</button>
-				<button class="twitter function button-picture">Twitter</button>
 			</div>
 			<div id="box3" style="display: none">
 				<div class="label"></div>
