--- a/haste-server/static/index.html
+++ b/haste-server/static/index.html
@@ -23,51 +23,51 @@
 		<meta name="msapplication-TileImage" content="/mstile-144x144.png" />
 		<meta name="theme-color" content="#ffffff" />
 
-		<link rel="canonical" href="https://hastebin.skyra.pw">
-		<meta name="url" content="https://hastebin.skyra.pw">
-		<meta name="identifier-URL" content="https://hastebin.skyra.pw">
-		<meta name="shortlink" content="https://hastebin.skyra.pw">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="keywords" content="haste, bin, skyra, hastebin, paste, pastebin">
-		<meta name="subject" content="Hastebin for Skyra and for you.">
-		<meta name="robots" content="archive,follow,imageindex,index,odp,snippet,translate">
-		<meta name="googlebot" content="index,follow">
-		<meta name="author" content="Skyra Project, contact@skyra.pw">
-		<meta name="owner" content="Skyra Project, contact@skyra.pw">
-		<meta name="designer" content="Skyra Project, contact@skyra.pw">
-		<meta name="reply-to" content="contact@skyra.pw">
-		<meta name="target" content="all">
-		<meta name="audience" content="all">
-		<meta name="coverage" content="Worldwide">
-		<meta name="distribution" content="Global">
-		<meta name="rating" content="safe for kids">
-		<meta name="apple-mobile-web-app-capable" content="yes">
-		<meta name="apple-mobile-web-app-status-bar-style" content="black">
-		<meta name="HandheldFriendly" content="True">
-		<meta name="apple-mobile-web-app-title" content="Hastebin">
-		<meta name="application-name" content="Hastebin">
-		<meta name="msapplication-TileColor" content="#282C34">
-		<meta name="msapplication-TileImage" content="/seo/icons/mstile-144x144.png">
-		<meta name="msapplication-config" content="/seo/browserconfig.xml">
-		<meta name="revisit-after" content="7 days">
-		<meta property="og:email" content="contact@skyra.pw">
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<meta http-equiv="Expires" content="1y">
-		<meta http-equiv="Pragma" content="1y">
-		<meta http-equiv="Cache-Control" content="1y">
-		<meta http-equiv="Page-Enter" content="RevealTrans(Duration=2.0,Transition=2)">
-		<meta http-equiv="Page-Exit" content="RevealTrans(Duration=3.0,Transition=12)">
-		<link rel="apple-touch-icon" sizes="180x180" href="/seo/icons/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="192x192" href="/seo/icons/android-chrome-192x192.png">
-		<link rel="icon" type="image/png" sizes="194x194" href="/seo/icons/android-chrome-194x194.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="/seo/icons/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="/seo/icons/favicon-16x16.png">
-		<link rel="manifest" href="/seo/manifest.json">
-		<link rel="shortcut icon" href="/seo/icons/favicon.ico">
-		<link rel="apple-touch-startup-image" href="/seo/icons/apple-startup.png">
-		<meta name="theme-color" content="#282C34">
-		<link rel="mask-icon" href="/seo/icons/safari-pinned-tab.svg" color="#1e88e5">
+		<link rel="canonical" href="https://hastebin.skyra.pw" />
+		<meta name="url" content="https://hastebin.skyra.pw" />
+		<meta name="identifier-URL" content="https://hastebin.skyra.pw" />
+		<meta name="shortlink" content="https://hastebin.skyra.pw" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="keywords" content="haste, bin, skyra, hastebin, paste, pastebin" />
+		<meta name="subject" content="Hastebin for Skyra and for you." />
+		<meta name="robots" content="archive,follow,imageindex,index,odp,snippet,translate" />
+		<meta name="googlebot" content="index,follow" />
+		<meta name="author" content="Skyra Project, contact@skyra.pw" />
+		<meta name="owner" content="Skyra Project, contact@skyra.pw" />
+		<meta name="designer" content="Skyra Project, contact@skyra.pw" />
+		<meta name="reply-to" content="contact@skyra.pw" />
+		<meta name="target" content="all" />
+		<meta name="audience" content="all" />
+		<meta name="coverage" content="Worldwide" />
+		<meta name="distribution" content="Global" />
+		<meta name="rating" content="safe for kids" />
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
+		<meta name="HandheldFriendly" content="True" />
+		<meta name="apple-mobile-web-app-title" content="Hastebin" />
+		<meta name="application-name" content="Hastebin" />
+		<meta name="msapplication-TileColor" content="#282C34" />
+		<meta name="msapplication-TileImage" content="/seo/icons/mstile-144x144.png" />
+		<meta name="msapplication-config" content="/seo/browserconfig.xml" />
+		<meta name="revisit-after" content="7 days" />
+		<meta property="og:email" content="contact@skyra.pw" />
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<meta http-equiv="Expires" content="1y" />
+		<meta http-equiv="Pragma" content="1y" />
+		<meta http-equiv="Cache-Control" content="1y" />
+		<meta http-equiv="Page-Enter" content="RevealTrans(Duration=2.0,Transition=2)" />
+		<meta http-equiv="Page-Exit" content="RevealTrans(Duration=3.0,Transition=12)" />
+		<link rel="apple-touch-icon" sizes="180x180" href="/seo/icons/apple-touch-icon.png" />
+		<link rel="icon" type="image/png" sizes="192x192" href="/seo/icons/android-chrome-192x192.png" />
+		<link rel="icon" type="image/png" sizes="194x194" href="/seo/icons/android-chrome-194x194.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="/seo/icons/favicon-32x32.png" />
+		<link rel="icon" type="image/png" sizes="16x16" href="/seo/icons/favicon-16x16.png" />
+		<link rel="manifest" href="/seo/manifest.json" />
+		<link rel="shortcut icon" href="/seo/icons/favicon.ico" />
+		<link rel="apple-touch-startup-image" href="/seo/icons/apple-startup.png" />
+		<meta name="theme-color" content="#282C34" />
+		<link rel="mask-icon" href="/seo/icons/safari-pinned-tab.svg" color="#1e88e5" />
 
 		<!-- HASTE SCRIPT -->
 		<script type="text/javascript">
