--- a/haste-server/static/index.html
+++ b/haste-server/static/index.html
@@ -13,16 +13,10 @@
 			integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
 			crossorigin="anonymous"
 		></script>
-		<script type="text/javascript" src="minified/highlight.pack.js"></script>
+		<script type="text/javascript" src="minified/highlight.min.js"></script>
 		<script type="text/javascript" src="minified/application.min.js"></script>
 
 		<!-- SEO -->
-		<link rel="manifest" href="/site.webmanifest" />
-		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
-		<meta name="msapplication-TileColor" content="#da532c" />
-		<meta name="msapplication-TileImage" content="/mstile-144x144.png" />
-		<meta name="theme-color" content="#ffffff" />
-
 		<link rel="canonical" href="https://hastebin.skyra.pw" />
 		<meta name="url" content="https://hastebin.skyra.pw" />
 		<meta name="identifier-URL" content="https://hastebin.skyra.pw" />
@@ -107,7 +101,7 @@
 		<div id="key">
 			<div id="pointer" style="display: none"></div>
 			<div id="box1">
-				<a href="/about.md" class="logo"></a>
+				<a href="/README.md" class="logo"></a>
 			</div>
 			<div id="box2">
 				<button class="save function button-picture">Save</button>
