--- a/haste-server/src/frontend/index.html
+++ b/haste-server/src/frontend/index.html
@@ -2,19 +2,10 @@
 	<head>
 		<title>Hastebin</title>
 		<meta charset="utf-8" />
-		<link rel="stylesheet" type="text/css" href="css/atom-one-dark-reasonable.css" />
-		<link rel="stylesheet" type="text/css" href="css/application.css" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" />
 		<link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet" />
 
-		<script
-			type="text/javascript"
-			src="https://code.jquery.com/jquery-3.5.1.min.js"
-			integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-			crossorigin="anonymous"
-		></script>
-		<script type="text/javascript" src="minified/highlight.min.js"></script>
-		<script type="text/javascript" src="minified/application.min.js"></script>
+		<script type="text/javascript" src="./index.ts"></script>
 
 		<!-- SEO -->
 		<link rel="canonical" href="https://hastebin.skyra.pw" />
@@ -41,8 +32,8 @@
 		<meta name="apple-mobile-web-app-title" content="Hastebin" />
 		<meta name="application-name" content="Hastebin" />
 		<meta name="msapplication-TileColor" content="#282C34" />
-		<meta name="msapplication-TileImage" content="/seo/icons/mstile-144x144.png" />
-		<meta name="msapplication-config" content="/seo/browserconfig.xml" />
+		<meta name="msapplication-TileImage" content="./seo/icons/mstile-144x144.png" />
+		<meta name="msapplication-config" content="./seo/browserconfig.xml" />
 		<meta name="revisit-after" content="7 days" />
 		<meta property="og:email" content="contact@skyra.pw" />
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -52,16 +43,15 @@
 		<meta http-equiv="Cache-Control" content="1y" />
 		<meta http-equiv="Page-Enter" content="RevealTrans(Duration=2.0,Transition=2)" />
 		<meta http-equiv="Page-Exit" content="RevealTrans(Duration=3.0,Transition=12)" />
-		<link rel="apple-touch-icon" sizes="180x180" href="/seo/icons/apple-touch-icon.png" />
-		<link rel="icon" type="image/png" sizes="192x192" href="/seo/icons/android-chrome-192x192.png" />
-		<link rel="icon" type="image/png" sizes="194x194" href="/seo/icons/android-chrome-194x194.png" />
-		<link rel="icon" type="image/png" sizes="32x32" href="/seo/icons/favicon-32x32.png" />
-		<link rel="icon" type="image/png" sizes="16x16" href="/seo/icons/favicon-16x16.png" />
-		<link rel="manifest" href="/seo/manifest.json" />
-		<link rel="shortcut icon" href="/seo/icons/favicon.ico" />
-		<link rel="apple-touch-startup-image" href="/seo/icons/apple-startup.png" />
+		<link rel="apple-touch-icon" sizes="180x180" href="./seo/icons/apple-touch-icon.png" />
+		<link rel="icon" type="image/png" sizes="192x192" href="./seo/icons/android-chrome-192x192.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="./seo/icons/favicon-32x32.png" />
+		<link rel="icon" type="image/png" sizes="16x16" href="./seo/icons/favicon-16x16.png" />
+		<link rel="manifest" href="./seo/manifest.json" />
+		<link rel="shortcut icon" href="./seo/icons/favicon.ico" />
+		<link rel="apple-touch-startup-image" href="./seo/icons/apple-startup.png" />
 		<meta name="theme-color" content="#282C34" />
-		<link rel="mask-icon" href="/seo/icons/safari-pinned-tab.svg" color="#1e88e5" />
+		<link rel="mask-icon" href="./seo/icons/safari-pinned-tab.svg" color="#1e88e5" />
 
 		<!-- HASTE SCRIPT -->
 		<script type="text/javascript">
