feat(haste): server patches

--- a/haste-server/src/frontend/index.html
+++ b/haste-server/src/frontend/index.html
@@ -91,7 +91,7 @@
 		<div id="key">
 			<div id="pointer" style="display: none"></div>
 			<div id="box1">
-				<a href="/README.md" class="logo"></a>
+				<a href="/about" class="logo"></a>
 			</div>
 			<div id="box2">
 				<button class="save function button-picture">Save</button>
