fix(haste): fix web manifest parcel bundling

--- a/haste-server/src/frontend/index.html
+++ b/haste-server/src/frontend/index.html
@@ -47,7 +47,7 @@
 		<link rel="icon" type="image/png" sizes="192x192" href="./seo/icons/android-chrome-192x192.png" />
 		<link rel="icon" type="image/png" sizes="32x32" href="./seo/icons/favicon-32x32.png" />
 		<link rel="icon" type="image/png" sizes="16x16" href="./seo/icons/favicon-16x16.png" />
-		<link rel="manifest" href="./seo/manifest.json" />
+		<link rel="manifest" href="./seo/site.webmanifest" />
 		<link rel="shortcut icon" href="./seo/icons/favicon.ico" />
 		<link rel="apple-touch-startup-image" href="./seo/icons/apple-startup.png" />
 		<meta name="theme-color" content="#282C34" />
