fix(haste): fixed styling for pnotify

--- a/haste-server/src/frontend/index.html
+++ b/haste-server/src/frontend/index.html
@@ -3,7 +3,10 @@
 		<title>Hastebin</title>
 		<meta charset="utf-8" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" />
-		<link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Material+Icons&family=Fira+Code&family=Roboto:wght@400;500&display=swap"
+			rel="stylesheet"
+		/>
 
 		<script defer="true" type="text/javascript" src="./index.ts"></script>
 
