fix(haste): fixed button state

--- a/haste-server/src/frontend/index.html
+++ b/haste-server/src/frontend/index.html
@@ -64,7 +64,7 @@
 			</div>
 			<div id="box2">
 				<button class="save function button-picture">Save</button>
-				<button class="new function button-picture">New</button>
+				<button class="new function button-picture enabled">New</button>
 				<button class="duplicate function button-picture">Duplicate & Edit</button>
 				<button class="raw function button-picture">Just Text</button>
 			</div>
