fix: do not reload full page when loading about page

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -15,7 +15,7 @@
 		<meta name="shortlink" content="https://hastebin.skyra.pw" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="keywords" content="haste, bin, skyra, hastebin, paste, pastebin" />
-		<meta name="subject" content="Hastebin for Skyra and for you." />
+		<meta name="subject" content="Hastebin for developers, by developers." />
 		<meta name="robots" content="archive,follow,imageindex,index,odp,snippet,translate" />
 		<meta name="googlebot" content="index,follow" />
 		<meta name="author" content="Skyra Project, contact@skyra.pw" />
@@ -59,7 +59,7 @@
 		<script type="module" src="/src/main.ts"></script>
 		<div id="key">
 			<div id="box1">
-				<a href="/about.md" class="logo"></a>
+				<a href="/about.md" id="logo" class="logo"></a>
 			</div>
 			<div id="box2">
 				<button class="save function button-picture">Save</button>
